# aoc2020

./: .gitignore  LICENSE  README.md
1/: Main.hs  Util.hs  x1.cabal
10/: Main.hs  Util.hs
11/: Main.hs  Util.hs  x1.cabal
12/: Main.hs  Util.hs
13/: Main.hs  Util.hs  x1.cabal
14/: Main.hs  Util.hs
15/: Main.hs
16/: Main.hs  Util.hs  x1.cabal
17/: Main.hs  Util.hs
18/: Main.hs  Queue.hs  Util.hs
19/: Main.hs  Util.hs  x1.cabal
2/: Main.hs
20/: Main.hs  Util.hs
21/: Main.hs  Util.hs
22/: Main.hs  Queue.hs  x1.cabal
23/: Main.hs  Util.hs  x1.cabal
24/: Main.hs  Util.hs
25/: Main.hs
3/: Main.hs  Util.hs
4/: Main.hs  Util.hs
5/: Main.hs  Util.hs
6/: Main.hs  Util.hs
7/: Main.hs  Util.hs  x1.cabal
8/: Computer.hs  Main.hs  x1.cabal
9/: Main.hs
base/: Main.hs  Util.hs  x1.cabal
