cabal-version:       >=1.10
name:                x1
version:             0.1.0.0
build-type:          Simple
executable x1
  main-is:             Main.hs
  other-modules:       Util
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, split == 0.2.3.4, containers == 0.6.4.1, memoize == 0.8.1
  -- hs-source-dirs:
  default-language:    Haskell2010
